complete services and specialist section

--- a/hospital-website/index.html
+++ b/hospital-website/index.html
@@ -59,6 +59,238 @@
       </div>
     </header>
 
+    <!-- end of Hero Section -->
+
+    <!-- services Section -->
+    <section id="services">
+      <h2>Our Services</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, soluta
+        expedita eveniet molestiae itaque impedit.
+      </p>
+
+      <div class="container">
+        <article>
+          <i class="ri-book-read-fill"></i>
+          <div>
+            <h4>Online Booking</h4>
+            <small>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
+              aliquid aspernatur earum repellat exercitationem deleniti omnis
+              veritatis non temporibus?
+            </small>
+          </div>
+        </article>
+
+        <article>
+          <i class="ri-verified-badge-fill"></i>
+          <div>
+            <h4>Qualified Doctors</h4>
+            <small>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
+              aliquid aspernatur earum repellat exercitationem deleniti omnis
+              veritatis non temporibus?
+            </small>
+          </div>
+        </article>
+
+        <article>
+          <i class="ri-customer-service-fill"></i>
+          <div>
+            <h4>Private Support</h4>
+            <small>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
+              aliquid aspernatur earum repellat exercitationem deleniti omnis
+              veritatis non temporibus?
+            </small>
+          </div>
+        </article>
+
+        <article>
+          <i class="ri-hand-heart-line"></i>
+          <div>
+            <h4>Well Cared</h4>
+            <small>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
+              aliquid aspernatur earum repellat exercitationem deleniti omnis
+              veritatis non temporibus?
+            </small>
+          </div>
+        </article>
+
+        <article>
+          <i class="ri-first-aid-kit-line"></i>
+          <div>
+            <h4>Need Emergency</h4>
+            <small>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
+              aliquid aspernatur earum repellat exercitationem deleniti omnis
+              veritatis non temporibus?
+            </small>
+          </div>
+        </article>
+
+        <article>
+          <i class="ri-meta-fill"></i>
+          <div>
+            <h4>24 Hour Service</h4>
+            <small>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
+              aliquid aspernatur earum repellat exercitationem deleniti omnis
+              veritatis non temporibus?
+            </small>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- end of services Section -->
+
+    <!-- specialist Section -->
+    <section id="specialist">
+      <h2>Our Top Specialist</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum nesciunt
+        nihil aspernatur ea similique, quae eveniet hic alias dolores
+        reprehenderit.
+      </p>
+
+      <div class="container">
+        <article>
+          <div class="special_image">
+            <img src="./assets/images/doc-1.jpg" alt="doctor" />
+          </div>
+
+          <div class="special_details">
+            <h4>Dr. Ali</h4>
+            <small>Surgery Specialist</small>
+          </div>
+          <div class="special_socials">
+            <a href="https://linkedin.com" target="_blank">
+              <i class="ri-linkedin-fill"></i>
+            </a>
+            <a href="https://facebook.com" target="_blank">
+              <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <i class="ri-instagram-fill"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+          <a
+            href="https://api.whatsapp.com/send?phone=+923018818926"
+            class="special_whatsapp"
+            target="_blank"
+          >
+            <i class="ri-whatsapp-line"></i>
+          </a>
+        </article>
+
+        <article>
+          <div class="special_image">
+            <img src="./assets/images/doc-3.jpg" alt="doctor" />
+          </div>
+
+          <div class="special_details">
+            <h4>Dr. Liza Apedo</h4>
+            <small>Orthopedic Specialist</small>
+          </div>
+          <div class="special_socials">
+            <a href="https://linkedin.com" target="_blank">
+              <i class="ri-linkedin-fill"></i>
+            </a>
+            <a href="https://facebook.com" target="_blank">
+              <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <i class="ri-instagram-fill"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+          <a
+            href="https://api.whatsapp.com/send?phone=+923018818926"
+            class="special_whatsapp"
+            target="_blank"
+          >
+            <i class="ri-whatsapp-line"></i>
+          </a>
+        </article>
+
+        <article>
+          <div class="special_image">
+            <img src="./assets/images/doc-4.jpg" alt="doctor" />
+          </div>
+
+          <div class="special_details">
+            <h4>Dr. Hassan</h4>
+            <small>Surgery Specialist</small>
+          </div>
+          <div class="special_socials">
+            <a href="https://linkedin.com" target="_blank">
+              <i class="ri-linkedin-fill"></i>
+            </a>
+            <a href="https://facebook.com" target="_blank">
+              <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <i class="ri-instagram-fill"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+          <a
+            href="https://api.whatsapp.com/send?phone=+923018818926"
+            class="special_whatsapp"
+            target="_blank"
+          >
+            <i class="ri-whatsapp-line"></i>
+          </a>
+        </article>
+
+        <article>
+          <div class="special_image">
+            <img src="./assets/images/doc-5.jpg" alt="doctor" />
+          </div>
+
+          <div class="special_details">
+            <h4>Dr. Aliza</h4>
+            <small>Cardiology Specialist</small>
+          </div>
+          <div class="special_socials">
+            <a href="https://linkedin.com" target="_blank">
+              <i class="ri-linkedin-fill"></i>
+            </a>
+            <a href="https://facebook.com" target="_blank">
+              <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <i class="ri-instagram-fill"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+          <a
+            href="https://api.whatsapp.com/send?phone=+923018818926"
+            class="special_whatsapp"
+            target="_blank"
+          >
+            <i class="ri-whatsapp-line"></i>
+          </a>
+        </article>
+      </div>
+    </section>
+    <!-- end of specialist Section -->
+
+    <!-- testimonials Section -->
+    <section id="testimonials"></section>
+    <!-- end of testimonials Section -->
+
     <script src="./script.js"></script>
   </body>
 </html>
