complete hospital website

--- a/hospital-website/index.html
+++ b/hospital-website/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <!-- Nav Starts -->
@@ -86,10 +90,10 @@
           <i class="ri-verified-badge-fill"></i>
           <div>
             <h4>Qualified Doctors</h4>
+            <h4>Qualified Doctors</h4>
             <small>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque
-              aliquid aspernatur earum repellat exercitationem deleniti omnis
-              veritatis non temporibus?
+              aliquid aspernatur earum veritatis non temporibus?
             </small>
           </div>
         </article>
@@ -288,9 +292,351 @@
     <!-- end of specialist Section -->
 
     <!-- testimonials Section -->
-    <section id="testimonials"></section>
+    <section id="testimonials" class="swiper mySwiper">
+      <h2>What Our Patients Say</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus vero
+        est quia optio saepe quisquam.
+      </p>
+
+      <div class="swiper-wrapper">
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-1.jpg" alt="user-1" />
+            </div>
+
+            <div class="patient_details">
+              <h5>Nana Ama McBrown</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-2.jpg" alt="user-2" />
+            </div>
+
+            <div class="patient_details">
+              <h5>Rose White</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-3.jpg" alt="user-3" />
+            </div>
+
+            <div class="patient_details">
+              <h5>John Doe</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-4.jpg" alt="user-4" />
+            </div>
+
+            <div class="patient_details">
+              <h5>Chantel</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-5.jpg" alt="user-5" />
+            </div>
+
+            <div class="patient_details">
+              <h5>Aliza Smith</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-6.jpg" alt="user-6" />
+            </div>
+
+            <div class="patient_details">
+              <h5>Jane Doe</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+
+        <article class="swiper-slide">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perspiciatis consequatur non ipsa? Esse consequuntur ea sunt, eius
+            excepturi facilis dignissimos accusantium cumque illum quod,
+            recusandae obcaecati molestiae, architecto fugit veniam?
+          </p>
+
+          <div class="patient">
+            <div class="avatar">
+              <img src="./assets/images/user-7.jpg" alt="user-7" />
+            </div>
+
+            <div class="patient_details">
+              <h5>Smith Stone</h5>
+              <small>Patient</small>
+            </div>
+          </div>
+        </article>
+      </div>
+
+      <div class="swiper-pagination"></div>
+    </section>
     <!-- end of testimonials Section -->
 
+    <!-- appointment Section -->
+    <section id="appointments">
+      <div class="container">
+        <div class="info">
+          <h2>Get An Appointment</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ipsam
+            quos accusamus possimus dolorum!
+          </p>
+
+          <article>
+            <div class="info-icon">
+              <i class="ri-user-line"></i>
+            </div>
+
+            <div>
+              <h4>Experience Doctors</h4>
+              <small
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum est exercitationem maxime et accusantium? Officiis cum
+                porro nisi suscipit ab similique excepturi enim ad ratione
+                aliquid eius, accusantium tempore doloremque!</small
+              >
+            </div>
+          </article>
+
+          <article>
+            <div class="info-icon">
+              <i class="ri-flashlight-fill"></i>
+            </div>
+
+            <div>
+              <h4>Advanced Technology</h4>
+              <small
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum est exercitationem maxime et accusantium? Officiis cum
+                porro nisi suscipit ab similique excepturi enim ad ratione
+                aliquid eius, accusantium tempore doloremque!</small
+              >
+            </div>
+          </article>
+
+          <article>
+            <div class="info-icon">
+              <i class="ri-first-aid-kit-line"></i>
+            </div>
+
+            <div>
+              <h4>Emergency Care</h4>
+              <small
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum est exercitationem maxime et accusantium? Officiis cum
+                porro nisi suscipit ab similique excepturi enim ad ratione
+                aliquid eius, accusantium tempore doloremque!</small
+              >
+            </div>
+          </article>
+        </div>
+
+        <form action="https://formspree.io/f/xgvwjzgp" method="POST">
+          <div class="form_group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              placeholder="Enter your name"
+              name="Patient's Name"
+              id="name"
+              required
+            />
+          </div>
+
+          <div class="form_group">
+            <label for="phone">Phone Number</label>
+            <input
+              type="number"
+              placeholder="Enter Phone Number"
+              name="Phone Number"
+              id="phone"
+              required
+            />
+          </div>
+
+          <div class="form_group">
+            <label for="date">Date</label>
+            <input
+              type="date"
+              placeholder="Choose Date"
+              name="Date"
+              id="date"
+              required
+            />
+          </div>
+
+          <div class="form_group">
+            <label for="department">Select Department</label>
+            <select name="Department" id="department" required>
+              <option value="Department One">Department One</option>
+              <option value="Department two">Department Two</option>
+              <option value="Department three">Department Three</option>
+              <option value="Department four">Department Four</option>
+            </select>
+          </div>
+
+          <div class="form_group">
+            <label for="doctor">Select Doctor</label>
+            <select name="Doctor" id="doctor" required>
+              <option value="Doctor One">Doctor One</option>
+              <option value="Doctor two">Doctor Two</option>
+              <option value="Doctor three">Doctor Three</option>
+              <option value="Doctor four">Doctor Four</option>
+              <option value="Doctor five">Doctor Five</option>
+            </select>
+          </div>
+
+          <div class="form_group">
+            <label for="message">Additional Message</label>
+            <textarea
+              name="Add Message"
+              id="message"
+              rows="6"
+              placeholder="Add a message"
+            ></textarea>
+          </div>
+
+          <div class="button">
+            <input type="submit" value="Submit Request" class="btn-primary" />
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- end of appointment Section -->
+
+    <!-- footer Section -->
+    <footer>
+      <div class="container">
+        <article>
+          <a href="#" class="footer_logo"><h3>SurgiSilks</h3></a>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam,
+            deleniti.
+          </p>
+
+          <div>
+            <i class="ri-phone-fill"></i>
+            <small>+92-333-33333333</small>
+          </div>
+
+          <div>
+            <i class="ri-mail-line"></i>
+            <small>support@surgisilks.com</small>
+          </div>
+        </article>
+
+        <article>
+          <h3>Support</h3>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Cookie Policy</a>
+          <a href="#">Purchasing Policy</a>
+          <a href="#">Terms & Conditions</a>
+          <a href="#">Career</a>
+        </article>
+
+        <article>
+          <h3>Permalinks</h3>
+          <a href="#">Home</a>
+          <a href="#services">Services</a>
+          <a href="#specialist">Specialists</a>
+          <a href="#testimonials">Testimonials</a>
+          <a href="#appointments" class="btn-primary">Get Appointment</a>
+        </article>
+
+        <article>
+          <h3>Contact Us</h3>
+          <p>Press</p>
+          <p>FAQs</p>
+          <div class="footer_socials">
+            <a href="#"><i class="ri-linkedin-fill"></i></a>
+            <a href="#"><i class="ri-facebook-fill"></i></a>
+            <a href="#"><i class="ri-instagram-fill"></i></a>
+            <a href="#"><i class="ri-twitter-fill"></i></a>
+          </div>
+        </article>
+      </div>
+
+      <div class="copyright">
+        <small>&copy; Copyright SurgiSilks. All Rights Reserved.</small>
+      </div>
+    </footer>
+    <!-- end of footer Section -->
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
