set some predefine style like colors

--- a/ali-portfolio/index.html
+++ b/ali-portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="icon" href="./assets/favicon-16x16.png" type="image/png" />
+    <link rel="icon" href="./assets/favicon.png" type="image/png" />
     <title>Ali Hassan</title>
 
     <!-- css -->
@@ -18,7 +18,27 @@
     />
   </head>
   <body>
-    <h1>Ali Hassan</h1>
+    <nav>
+      <div class="container nav_container">
+        <a href="index.html" class="nav_logo">
+          <img src="./assets/logo.png" style="width: 6rem" alt="logo" />
+        </a>
+
+        <ul class="nav_menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+
+        <div class="nav_buttons">
+          <button class="nav_theme"><i class="ri-moon-fill"></i></button>
+          <button class="nav_open"><i class="ri-menu-4-line"></i></button>
+          <button class="nav_close"><i class="ri-close-line"></i></button>
+        </div>
+      </div>
+    </nav>
 
     <script src="./script.js"></script>
   </body>
