complete hero and about section

--- a/ali-portfolio/index.html
+++ b/ali-portfolio/index.html
@@ -18,10 +18,11 @@
     />
   </head>
   <body>
+    <!-- Start Nav -->
     <nav>
       <div class="container nav_container">
         <a href="index.html" class="nav_logo">
-          <img src="./assets/logo.png" style="width: 6rem" alt="logo" />
+          <img src="./assets/logo.png" alt="logo" />
         </a>
 
         <ul class="nav_menu">
@@ -39,6 +40,110 @@
         </div>
       </div>
     </nav>
+
+    <!-- end Nav -->
+
+    <!-- start header -->
+    <header>
+      <div class="container header_container">
+        <article class="header_image">
+          <img src="./assets/ali-6.jpg" alt="header-img" />
+        </article>
+
+        <article class="header_content">
+          <h4>Hi, I'm <span>Ali Hassan</span>. And I'll</h4>
+          <h1>Get you business <br />online the right way</h1>
+          <p>
+            Are you looking for a professional developer to put your business
+            online? You've come to the right place! I've helped many business
+            owners bring their ideas to life. Hire me today!
+          </p>
+          <div class="header_cta">
+            <a href="#contact" class="btn btn-primary">Hire me</a>
+            <a href="#projects" class="btn">Portfolio</a>
+          </div>
+        </article>
+        <article class="header_socials">
+          <li>
+            <a href="https://github.com/it5ali-dev" target="_blank">
+              <i class="ri-github-fill"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://facebook.com" target="_blank">
+              <i class="ri-facebook-fill"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://instagram.com" target="_blank">
+              <i class="ri-instagram-fill"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com" target="_blank">
+              <i class="ri-linkedin-fill"></i>
+            </a>
+          </li>
+        </article>
+      </div>
+    </header>
+    <!-- end header -->
+
+    <!-- start about -->
+    <section id="about" class="about">
+      <div class="container about_container">
+        <div class="about_image">
+          <img src="./assets/ali-7.jpg" alt="about-img" />
+        </div>
+        <div class="about_details">
+          <h1>About me</h1>
+          <div class="about_cards">
+            <article class="about_card">
+              <i class="ri-award-line"></i>
+              <h4>Experience</h4>
+              <small>2+ years</small>
+            </article>
+
+            <article class="about_card">
+              <i class="ri-wallet-line"></i>
+              <h4>Projects</h4>
+              <small>20+ completed</small>
+            </article>
+
+            <article class="about_card">
+              <i class="ri-group-line"></i>
+              <h4>Clients</h4>
+              <small>20+ worldwide</small>
+            </article>
+          </div>
+
+          <p>
+            Building projects my clients love have always been my passion. Being
+            in the web development industry for over 2 years and serving more
+            than 20 happy clients worldwide. I'm always motivated to do more.
+          </p>
+          <p>
+            Hi, My name is Ali Hassan from Pakistan. I'm full stack web
+            developer with a Bachelors degree in Computer Science. My top
+            priority is to get your business online the right way, giving you
+            industry-standard design and all the functionality you need to
+            operate smoothly online. Get in touch today with the details of your
+            project. Let's get started! Check out my resume below!
+          </p>
+
+          <a
+            href="./assets/ali-cv.pdf"
+            class="btn btn-primary"
+            download
+            target="_blank"
+          >
+            <i class="ri-download-2-fill"></i>
+            Download CV
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- end about -->
 
     <script src="./script.js"></script>
   </body>
