change some sections text content

--- a/ali-portfolio/index.html
+++ b/ali-portfolio/index.html
@@ -197,8 +197,8 @@
     <section id="projects" class="projects">
       <h1>Recent Projects</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius repellat
-        consequatur voluptas necessitatibus.
+        Here you can get source and demo of the projects that I have done for my
+        clients.
       </p>
 
       <ul class="projects_categories">
